# HFR_LFR

./: .gitignore  README.md
Downframe/: downframe.sln
Downframe/downframe/: CMakeLists.txt  HFR2LFRBlurConverter.cpp  HFR2LFRBlurConverter.h  HFR2LFRConverter.cpp  HFR2LFRDecimationConverter.cpp  HFR2LFRDecimationConverter.h  HFR2LFRFlowDrawer.cpp  HFR2LFRFlowDrawer.h  HFR2LFRFusionConverter.cpp  HFR2LFRMix255025.cpp  HFR2LFRMix255025.h  HFR2LFRMix5050.cpp  HFR2LFRMix5050.h  HFR2LFRYuv.cpp  HFR2LFRYuv.h  HFR2LFRYuvReader.cpp  HFR2LFRYuvReader.h  Utils.cpp  Utils.h  downframe.vcxproj  main.cpp  yuv.h
Lowcost/: CMakeLists.txt  HFR2LFRConverter.cpp  HFR2LFRConverter.h  HFR2LFRInterlaceConverter.cpp  HFR2LFRInterlaceConverter.h  HFR2LFRSpatiotemporalGradient.cpp  HFR2LFRSpatiotemporalGradient.h  HFR2LFRSpatiotemporalGradient2.cpp  HFR2LFRSpatiotemporalGradient2.h  HFR2LFRTemporalGradient.cpp  HFR2LFRTemporalGradient.h  HFR2LFRTemporalSobel.cpp  HFR2LFRTemporalSobel.h  Utils.h  main.cpp
Papier/: Makefile  article_3.aux  article_3.tex  article_3.toc  plan_papier.txt  references.bib
gpu/: CMakeLists.txt  main.cpp
gpu_version/: HFR2LFRBlurConverter.cpp  HFR2LFRConverter.cpp  HFR2LFRConverter.h  HFR2LFRFlowDrawer.cpp  HFR2LFRFusionConverter.cpp  HFR2LFRFusionConverter.h  main.cpp
utils/: bcom_play.sh
